--- a/core/themes/claro/css/components/form.pcss.css
+++ b/core/themes/claro/css/components/form.pcss.css
@@ -4,6 +4,7 @@
  */
 
 ::placeholder {
+  opacity: 1;
   color: var(--input-fg-color--placeholder);
 }
 /* IE 10 and 11 needs this set as important. */
